--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 version: 1.0.{build}
-image: Ubuntu1804
+image: Visual Studio 2019
 before_build:
   - dotnet restore
   - choco install opencover.portable
