:package: Updating package name and assembly name

--- a/Cashwu.Core.DateTime.Tests/Cashwu.Core.DateTime.Tests.csproj
+++ b/Cashwu.Core.DateTime.Tests/Cashwu.Core.DateTime.Tests.csproj
@@ -8,13 +8,12 @@
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="5.7.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
         <PackageReference Include="xunit" Version="2.4.0" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\JavaLikeDateTime\JavaLikeDateTime.csproj" />
+      <ProjectReference Include="..\Cashwu.Core.DateTime\Cashwu.Core.DateTime.csproj" />
     </ItemGroup>
 
 </Project>
