--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -19,6 +19,13 @@ jobs:
         run: |
           dotnet tool install -g coverlet.console
           dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=../opencover.xml ./Cashwu.Core.DateTime.Tests/Cashwu.Core.DateTime.Tests.csproj
+      - name: upload coverage to codecov
+        uses: codecov/codecov-action@v1.0.5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: opencover.xml
+          flags: unittests
+          name: Cashwu.Core.DateTime
       - name: generate build number
         if: github.ref == 'refs/heads/master'
         uses: einaregilsson/build-number@v2
